--- a/components/codetools/languages/codetools.fr.po
+++ b/components/codetools/languages/codetools.fr.po
@@ -1,12 +1,12 @@
 msgid ""
 msgstr ""
-""
-"Last-Translator: \n"
-"PO-Revision-Date: 2003-02-17 23:19+0100\n"
+"Last-Translator: olivier guilbaud <golivier@free.fr>\n"
+"PO-Revision-Date: 26/02/2004 23:34\n"
 "Language-Team:  <fr@li.org>\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.6\n"
+"X-Generator: KBabel 1.0.2\n"
+"Project-Id-Version: codetools\n"
 
 #: codetoolsstrconsts:ctsothercompilerdefines
 msgid "%s Compiler Defines"
@@ -62,7 +62,7 @@ msgstr "\"%s\" non trouvé"
 
 #: codetoolsstrconsts:ctsclassofdefinitionnotresolved
 msgid "\"class of\" definition not resolved: %s"
-msgstr ""
+msgstr "\"class of\" définition non résolue : %s"
 
 #: codetoolsstrconsts:ctsendforclassnotfound
 msgid "\"end\" for class/object not found"
@@ -118,11 +118,11 @@ msgstr "définitions circulaire"
 
 #: codetoolsstrconsts:ctsclasssnotfound
 msgid "Class %s not found"
-msgstr ""
+msgstr "Class %s non trouvée"
 
 #: codetoolsstrconsts:ctsclassnotfound
 msgid "class %s%s%s not found"
-msgstr ""
+msgstr "class %s%s%s non trouvée"
 
 #: codetoolsstrconsts:ctsclassidentifierexpected
 msgid "class identifier expected"
@@ -138,7 +138,7 @@ msgstr "classe sans nom"
 
 #: codetoolsstrconsts:ctscommandlineparameters
 msgid "Command line parameters"
-msgstr ""
+msgstr "Paramètres de ligne de commande"
 
 #: codetoolsstrconsts:ctscommentendnotfound
 msgid "Comment end not found"
@@ -146,7 +146,7 @@ msgstr "Fin de commentaire non trouvé"
 
 #: codetoolsstrconsts:ctscompiledsrcpath
 msgid "Compiled SrcPath"
-msgstr ""
+msgstr "SrcPath Compilé"
 
 #: codetoolsstrconsts:ctscompiler
 msgid "Compiler"
@@ -286,7 +286,7 @@ msgstr "droits d'exécution refusés pour %s"
 
 #: codetoolsstrconsts:ctsendofsourceexpectedbutatomfound
 msgid "expected end., but %s found"
-msgstr ""
+msgstr "end. attendu , mais %s trouvé"
 
 #: codetoolsstrconsts:ctsexprtypemustbeclassorrecord
 msgid "expression type must be class or record type"
@@ -298,7 +298,7 @@ msgstr "le fichier \"%s\" n'existe pas"
 
 #: codetoolsstrconsts:ctsfileisreadonly
 msgid "file is read only"
-msgstr ""
+msgstr "le fichier est en lecture seul"
 
 #: codetoolsstrconsts:ctsforward
 msgid "Forward"
@@ -422,11 +422,11 @@ msgstr "section interface non trouvée"
 
 #: codetoolsstrconsts:ctsinvalidclassname2
 msgid "invalid class name %s%s%s"
-msgstr ""
+msgstr "nom de class %s%s%s non valide"
 
 #: codetoolsstrconsts:ctsinvalidclassname
 msgid "invalid class name=%s%s%s"
-msgstr ""
+msgstr "nom de class %s%s%s non valide"
 
 #: codetoolsstrconsts:ctsinvalidflagvaluefordirective
 msgid "invalid flag value \"%s\" for directive %s"
@@ -446,11 +446,11 @@ msgstr "type non valide"
 
 #: codetoolsstrconsts:ctsinvalidvariablename
 msgid "invalid variable name %s%s%s"
-msgstr ""
+msgstr "nom de variable %s%s%s non valide"
 
 #: codetoolsstrconsts:ctsinvalidvariabletype
 msgid "invalid variable type %s%s%s"
-msgstr ""
+msgstr "type de variable %s%s%s non valide"
 
 #: codetoolsstrconsts:ctsjitformdirectory
 msgid "JITForm Directory"
@@ -598,7 +598,7 @@ msgstr "la source n'est pas une unité"
 
 #: codetoolsstrconsts:ctssourcenotfoundunit
 msgid "source not found: unit %s"
-msgstr ""
+msgstr "source de l'unité %s non trouvé."
 
 #: codetoolsstrconsts:ctssrcpathforcompiledunits
 msgid "src path for compiled units"
@@ -662,7 +662,7 @@ msgstr "mot-clé \"%s\" inattendu trouvé dans le bloc asm"
 
 #: codetoolsstrconsts:ctsunexpectedkeywordinbeginendblock
 msgid "unexpected keyword \"%s\" in begin..end found"
-msgstr ""
+msgstr "le mot clé \"%s\" n'est pas autorisé dans un begin..end"
 
 #: codetoolsstrconsts:ctsunexpectedsubrangeoperatorfound
 msgid "unexpected subrange operator '..' found"
