--- a/languages/objinspstrconsts.es.po
+++ b/languages/objinspstrconsts.es.po
@@ -1,6 +1,16 @@
+msgid ""
+msgstr ""
+"Last-Translator: Luis R. Hilario B. <luisdigital@BonBon.net>\n"
+"PO-Revision-Date: 2004-02-27 22:08-0400\n"
+"Project-Id-Version: objinspstrconsts\n"
+"Language-Team: Español\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.0.2\n"
+
 #: objinspstrconsts:sccsilcmbimglist
 msgid " Images "
-msgstr ""
+msgstr " Imágenes "
 
 #: objinspstrconsts:sccslvedtgrprcaption
 msgid " Item property "
@@ -12,7 +22,7 @@ msgstr ""
 
 #: objinspstrconsts:sccsilcmbimgsel
 msgid " Selected image "
-msgstr ""
+msgstr "Imagen seleccionada"
 
 #: objinspstrconsts:oisitemsselected
 msgid "%u items selected"
@@ -28,27 +38,27 @@ msgstr "&Suprimir"
 
 #: objinspstrconsts:sccsilbtnadd
 msgid "Add ..."
-msgstr ""
+msgstr "Añadir ..."
 
 #: objinspstrconsts:oisall
 msgid "All"
-msgstr ""
+msgstr "Todo"
 
 #: objinspstrconsts:sccsilbtnclear
 msgid "Clear"
-msgstr ""
+msgstr "Limpiar"
 
 #: objinspstrconsts:sccsilconfirme
 msgid "Confirme clear all images ?"
-msgstr ""
+msgstr "¿Confirme limpiar todas las imágenes?"
 
 #: objinspstrconsts:sccslvedtbtndel
 msgid "Delete"
-msgstr ""
+msgstr "Suprimir"
 
 #: objinspstrconsts:oiserror
 msgid "Error"
-msgstr ""
+msgstr "Error"
 
 #: objinspstrconsts:oisevents
 msgid "Events"
@@ -56,7 +66,7 @@ msgstr "Eventos"
 
 #: objinspstrconsts:sccslvedtimgindexcaption
 msgid "Image index"
-msgstr ""
+msgstr "Indice de imagen"
 
 #: objinspstrconsts:sccsiledtcaption
 msgid "Image list editor"
@@ -64,7 +74,7 @@ msgstr ""
 
 #: objinspstrconsts:sccslvedtlabcaption
 msgid "Label"
-msgstr ""
+msgstr "Etiqueta"
 
 #: objinspstrconsts:sccslvedtcaption
 msgid "ListView editor"
@@ -72,7 +82,7 @@ msgstr ""
 
 #: objinspstrconsts:sccslvedtbtnadd
 msgid "New"
-msgstr ""
+msgstr "Nuevo"
 
 #: objinspstrconsts:oisobjectinspector
 msgid "Object Inspector"
@@ -104,9 +114,9 @@ msgstr ""
 
 #: objinspstrconsts:oisunknown
 msgid "Unknown"
-msgstr ""
+msgstr "Desconocido"
 
 #: objinspstrconsts:oisvalue
 msgid "Value:"
-msgstr ""
+msgstr "Valor:"
 
